--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 body {
-    font-family: 'Source Code Pro', monospace;
     color: white;
     background: #222222;
+}
+
+.source-code-pro-normal {
+    font-family: "Source Code Pro", monospace;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
 }
