--- a/src/components/content-section/imageCollage/image-collage-styles.css
+++ b/src/components/content-section/imageCollage/image-collage-styles.css
@@ -1,9 +1,20 @@
 .image-collage-container {
-    margin: 2rem;
     display: grid;
-    gap: 0.5rem;
+    gap: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-auto-rows: 200px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 2rem;
+}
+
+.tester {
+    width: auto;
+    height: 40px;
+    border: 1px solid red;
+    margin-top: 2rem;
 }
 
 .image-container {
