--- a/src/components/title-bar/title-style.css
+++ b/src/components/title-bar/title-style.css
@@ -6,13 +6,25 @@
   margin-top: 25vh;
 }
 
-.input-bar {
-  display: flex;
+.landing-page-form {
+  position: fixed;
+  top: 0px;
   flex-direction: row;
-  justify-content: center;
-  align-items: end;
+  border: solid 4px hsl(37, 59%, 44%);
+  overflow: hidden;
+  border-radius: 15px;
   margin-inline: 10vw;
-  /* border: 2px solid red; */
+  height: 3rem;
+  transition: all 600ms;
+  margin-top: 3rem;
+}
+
+.form-common {
+  flex-direction: row;
+  border: solid 4px hsl(37, 59%, 44%);
+  overflow: hidden;
+  border-radius: 15px;
+  margin-inline: 10vw;
   height: 3rem;
   transition: all 600ms;
   margin-top: 3rem;
@@ -26,15 +38,13 @@
     hsl(233, 63%, 31%)
   );
   width: 25%;
+  height: 120%;
   min-width: 15rem;
   font-size: 2rem;
   padding: 3px;
   border: none;
   color: white;
-  height: 100%;
-  border-top-right-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-  transition: all 100ms;
+  transition: all 300ms;
 }
 
 .submit-button:active {
@@ -43,24 +53,23 @@
 
 .submit-button:hover {
   cursor: pointer;
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
     to bottom left,
-    hsl(233, 63%, 31%),
-    hsl(206, 51%, 45%)
-  );
+    hsla(206, 51%, 45%, 0.43),
+    hsl(233, 63%, 21%)
+  ); */
   color: #aaaaaa;
 }
 
 .input {
   border: none;
+  outline: none;
   font-size: 2rem;
+  color: white;
+  background-color: #444444;
   width: 75%;
-  height: calc(100% - 3px);
+  height: 120%;
   border-top-left-radius: 1rem;
   border-bottom-left-radius: 1rem;
   padding-left: 1rem;
-}
-
-.input:focus {
-  outline: none;
 }
