--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,25 @@
 body {
     color: white;
     background: #222222;
+    margin: 0px;
 }
 
 .source-code-pro-normal {
     font-family: "Source Code Pro", monospace;
     font-optical-sizing: auto;
-    font-weight: 400;
+    font-weight: 100;
     font-style: normal;
+}
+
+.flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
