--- a/src/components/content-section/imageCollage/image-collage-styles.css
+++ b/src/components/content-section/imageCollage/image-collage-styles.css
@@ -7,7 +7,8 @@
     grid-auto-rows: 200px;
     margin-left: 10px;
     margin-right: 10px;
-    margin-top: 2rem;
+    margin-top: 10rem;
+    margin-bottom: 4rem;
     width: 90%;
 }
 
