--- a/src/components/title-bar/title-style.css
+++ b/src/components/title-bar/title-style.css
@@ -15,8 +15,10 @@
   border-radius: 15px;
   margin-inline: 10vw;
   height: 3rem;
-  transition: all 600ms;
-  margin-top: 3rem;
+  transition: all 400ms;
+  margin-top: 1rem;
+  z-index: 1;
+  box-shadow: 0px 0px 30px 7px black;
 }
 
 .form-common {
