--- a/src/components/content-section/card-select-screen/card-select-screen.css
+++ b/src/components/content-section/card-select-screen/card-select-screen.css
@@ -1,32 +1,46 @@
 /* Styles for the card select screen */
 .card-select-screen {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-    background-color: rgba(0, 0, 0, 0.7);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
-  /* Styles for the image card */
+/* Styles for the image itself */
+.responsive-image {
+  max-width: 40%;
+  max-height: 40%;
+  margin-right: 1rem;
+  transition: all 200ms;
+}
+
+.responsive-image:hover {
+  box-shadow: rgba(2, 8, 20, 0.1) 0px 0.35em 1.17em, rgba(2, 8, 20, 0.06) 0px 0.175em 0.5em;
+  cursor: pointer;
+  transform: translateY(-4px) scale(1.03);
+  opacity: 0.4;
+}
+
+/* Styles for the image card */
 .image-card {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    color: white;
-    background-color: black;
-    padding: 30px 10px 10px; /* Padding adjusted for top and side */
-    max-width: 80vw;
-    border: solid #777777 2px;
-    border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: start;
+  color: white;
+  background-color: rgba(37, 37, 37, 0.9);
+  padding: 30px 10px 10px; /* Padding adjusted for top and side */
+  max-height: 70vh;
+  max-width: 80vw;
+  overflow: hidden;
 }
-  /* Styles for the image card text */
-.image-card-text {
-    display: flex;
-    flex-direction: column;
-}
+
+/* Styles for the image card text */
+/* .image-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
